plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'groovy'
    id("io.freefair.lombok") version "8.6"
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'com.azure:azure-spring-data-cosmos:5.9.1'
    implementation 'org.springframework.boot:spring-boot:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation platform('org.springframework.boot:spring-boot-dependencies:3.1.0')
    testImplementation 'org.codehaus.groovy:groovy-all:3.0.14'
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-3.0'
    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-3.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
}

tasks.named('test') {
    jvmArgs += ["--add-opens", "java.base/java.math=ALL-UNNAMED"]
    testLogging {
        exceptionFormat = 'full'
    }
    useJUnitPlatform()
}


